<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShoppingList</string>
    <string name="action_settings">Settings</string>
    <string name="shoppingList">Shopping List</string>
    <string name="manageList">Manage List</string>
    <string name="shoppinglist_title">Shopping List</string>
    <string name="remove">Remove</string>
    <string name="reset">Reset</string>
    <string name="add">Add</string>
    <string name="product_name">Product Name</string>
    <string name="clear_checked">Clear Checked</string>
    <string name="enter_product">Enter product name</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
</resources>
